@@ -1,2 +1,2 @@
-#Quisk version 4.2.39
+#Quisk version 4.2.40
 from .quisk import main
